--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -37,7 +37,7 @@ h1 {
 }
 h2, h3 {
   font-weight: normal;
-  font-size: 2.5em;
+  font-size: 2.2em;
   margin-bottom: 0.75em;
   text-align: center;
 }
@@ -229,11 +229,13 @@ svg.fa-facebook {
 }
 .meal dd {
   margin-left: 0;
+  font-style: italic;
 }
 .meal dt.price {
   display: none;
 }
 .meal dd.price {
+  font-style: normal;
   display: flex;
   justify-content: flex-end;
   font-weight: 700;
@@ -341,6 +343,9 @@ svg.fa-facebook {
 .part.hamburgers_and_pasta {
   background: url("/files/full/design/burger.jpg") right 60% no-repeat;
   color: white;
+}
+.part.frying_pan_wok {
+  background: url("/files/full/design/frying.jpg") center 60% no-repeat;
 }
 /*********************************/
 .menu {
