--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -374,7 +374,7 @@ svg.fa-facebook {
   background: url("/files/full/design/grill.jpg") left 60% no-repeat;
   color: white;
 }
-.part.desserts {
+.part.desserts-group {
   background: url("/files/full/design/desserts.jpg") center 60% no-repeat;
   padding: 8em 0;
 }
