--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -434,6 +434,7 @@ svg.fa-facebook {
 .weekend_events {
   padding: 0;
   box-sizing: border-box;
+  display: flex;
 }
 .content-card {
   box-shadow: 0 0.1em 0.1em 0 rgba(0,0,0,.14), 0 0.15em 0.05em -0.1em rgba(0,0,0,.12), 0 0.05em 0.25em 0 rgba(0,0,0,.2);
