--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -118,6 +118,9 @@ ol.contentlink-bc > li+li:before {
   background-image: url("/files/full/design/contact-header.jpg");
   background-position: 50%;
 }
+.hdesc.about_us {
+  background-image: url("/files/full/design/about-header.jpg");
+}
 .logo img {
   margin-top: -6em;
   width: 16em;
@@ -735,5 +738,9 @@ p.desc {
   margin-left: 0;
   font-style: italic;
   max-width: 36em;
+}
+/*********************************/
+.hdesc.about_us h1 {
+  margin-top: 2.25em;
 }
 /*********************************/
