--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -758,4 +758,8 @@ p.desc {
 .about_us.hdesc + div > .list li + li {
   display: none;
 }
+.content-img h2 + p {
+  padding-left: 1em;
+  padding-right: 1em;
+}
 /*********************************/
