--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -413,6 +413,9 @@ svg.fa-facebook {
   background: #555 url("/files/full/design/side.jpg") center 60% no-repeat;
   padding: 8em 0;
 }
+.part.steaks {
+  background: #ddd url("/files/full/design/steaks-raw.jpg") center no-repeat;
+}
 /*********************************/
 .menu {
   padding: 4em 0;
@@ -780,5 +783,26 @@ dl.klima dt:first-child + dd {
     width: auto;
     margin-right: 3em;
   }
+}
+.part.steaks {
+  margin-top: 4em;
+  padding: 8em 0;
+}
+.part.steaks > div {
+  max-width: 52em !important;
+}
+.part.steaks .multiple > div {
+  display: flex;
+  justify-content: center;
+}
+.part.steaks .multiple > div > * {
+  flex: 0 1 33%;
+  max-width: 33%;
+}
+.part.steaks .multiple img {
+  max-height: 16em;
+}
+.part.steaks .content-card p.description {
+  max-width: 27em;
 }
 /*********************************/
