--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -787,20 +787,27 @@ dl.klima dt:first-child + dd {
 .part.steaks {
   margin-top: 4em;
   padding: 8em 0;
+  text-align: center;
 }
 .part.steaks > div {
   max-width: 52em !important;
 }
 .part.steaks .multiple > div {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 .part.steaks .multiple > div > * {
-  flex: 0 1 33%;
-  max-width: 33%;
+  flex: 0 1 23%;
+  max-width: 23%;
+  text-align: center;
+}
+.part.steaks .multiple dd {
+  margin-left: 0;
+  font-style: italic;
 }
 .part.steaks .multiple img {
-  max-height: 16em;
+  max-width: 8em;
+  max-height: 11em;
 }
 .part.steaks .content-card p.description {
   max-width: 27em;
