--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -758,6 +758,12 @@ p.desc {
   margin: 1em 0 0 0.5em;
   padding-left: 0;
 }
+.contact_form form dt.noprint {
+  display: none;
+}
+.contact_form form dt.noprint + dd {
+  margin-top: 2em;
+}
 /*********************************/
 .hdesc.about_us h1 {
   margin-top: 2.25em;
