--- a/themes/default/screen.css
+++ b/themes/default/screen.css
@@ -450,6 +450,7 @@ svg.fa-facebook {
   padding: 0;
   box-sizing: border-box;
   display: flex;
+  width: 100%;
 }
 @media (min-width: 75em) {
   .daily_offer,
@@ -469,6 +470,7 @@ svg.fa-facebook {
   padding: 2em 0;
   width: 100%;
   max-width: 38em !important;
+  box-sizing: border-box;
 }
 #content .content-card {
   /* margin: 1em; */
@@ -594,9 +596,10 @@ svg.fa-facebook {
 .jaroslav_honzajk h2 + p {
   max-width: 14em;
 }
-.jaroslav_honzajk h2 + p + div + p {
+.jaroslav_honzajk .photoswipe li {
   text-align: center;
 }
+.jaroslav_honzajk h2 + p + div + p,
 .content-img h2 + p + div + p {
   text-align: center;
   max-width: 27em;
